trying again- glassware image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Assignment 2- Location<br />
       Practicing how to convey a particular location in an image.</p>
     <p><a href="#top">Back To Top</a></p>
-    <img src="editedWinnerwithCopy.jpg" alt="Image of a whiskey glass with a dragon perched on it's rim with logo and copy" title="Let Your Dreams Take Flight- For Royal Dragon Superior Vodka" />
+    <img src="glassware.jpg" alt="Image of a whiskey glass with a dragon perched on it's rim with logo and copy" title="Let Your Dreams Take Flight- For Royal Dragon Superior Vodka" />
     <p>Assignment 3- Glassware<br />
       Learning how to properly light clear glassware from behind.</p>
     <p><a href="#top">Back To Top</a></p>
