changes to assignment 6

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <p>Assignment 5- A Word<br />
       Using imagery to convey a word's meaning. Can you guess what word I was assigned?</p>
     <p><a href="#top">Back To Top</a></p>
-    <img src="Winner6withCopy.png" alt="Image of makeup brush and eyeshadow palette" title="Go Nude- For Covergirl makeup in association with Vogue magazine" />
+    <img src="Cosmetics1-editedCopy2.jpg" alt="Image of makeup brush and eyeshadow palette" title="Go Nude- For Covergirl makeup in association with Vogue magazine" />
     <p>Assignment 6- Cosmetics<br />
       Creating magazine worthy cosmetics shots, while keeping our product clean and crisp.</p>
     <p><a href="#top">Back To Top</a></p>
